adds rss feed for latest

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,4 +2,4 @@ baseURL = 'https://example.org/'
 languageCode = 'en-US'
 title = 'Hugo v0.123.6 Anchorizing Term URLs'
 
-disableKinds = ['rss','sitemap']
+disableKinds = ['sitemap']
